# propertyguru_scraper

./: .gitignore  app.py  property_data.xlsx  pyproject.toml
templates/: index.html
